[WebGL] Be safer about toggling OpenGL state by using a scoped object to control setting lifetime. https://bugs.webkit.org/show_bug.cgi?id=126548

Reviewed by Anders Carlsson.

No new tests since there is no change in behavior.

* GNUmakefile.list.am: Updated to build new TemporaryOpenGLSetting files.
* PlatformBlackBerry.cmake: Ditto
* PlatformEfl.cmake: Ditto
* PlatformGTK.cmake: Ditto
* PlatformNix.cmake: Ditto
* WebCore.vcxproj/WebCore.vcxproj: Ditto
* WebCore.vcxproj/WebCore.vcxproj.filters: Ditto
* WebCore.xcodeproj/project.pbxproj: Ditto
* platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:
(WebCore::GraphicsContext3D::resolveMultisamplingIfNecessary): Use new object.
* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::prepareTexture): Ditto
(WebCore::GraphicsContext3D::reshape): Ditto
* platform/graphics/opengl/TemporaryOpenGLSetting.cpp: Added.
(WebCore::TemporaryOpenGLSetting::TemporaryOpenGLSetting):
(WebCore::TemporaryOpenGLSetting::~TemporaryOpenGLSetting):
* platform/graphics/opengl/TemporaryOpenGLSetting.h: Added.


Canonical link: https://commits.webkit.org/144449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161389 268f45cc-cd09-0410-ab3c-d52691b4dbfc